--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "ipython>=9.8.0",
     "tyro>=0.9.35",
     "ipdb>=0.13.13",
+    "scipy>=1.16.3",
 ]
 
 [tool.setuptools.packages.find]
